spec/fixtures/layout/invalid/parent.erb
<%= break_me_in_parent %>
